docs(ai-docs): record authentication decisions
Add ADR-012 to ADR-018 covering the dedicated security module, the two
token kinds and their separate decoders, digest storage with rotation
and reuse detection, the derived client cookie key including the limit
of what it protects, the column and payload split of an account, the
absence of an AuthenticationManager, and path based API versioning.

Add findings 13 to 20, among them the renamed Boot 4 security starters,
the removal of TestRestTemplate, the final JDK 25 key derivation API and
the reflective CURRENT_VERSION lookup of the Aether starter.

Record the module graph, the authentication flow, the table layout and
the verification evidence, and open questions 9 to 14 on session wide
logout, cookie size, secret rotation, Argon2id, rate limiting and the
401 that unknown API paths now answer with.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>